--- a/src/client/app/layout/topnav.html
+++ b/src/client/app/layout/topnav.html
@@ -1,15 +1,15 @@
 ﻿<nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-header">
-        <a href="/" class="navbar-brand"><span class="brand-title">{{vm.title}}</span></a>
-        <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <a class="navbar-brand"><span class="brand-title">{{vm.title}}</span></a>
+        <a data-ng-if="user.isAuthenticated"  class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
     </div>
     <div class="navbar-collapse collapse">
-        <div class="pull-right navbar-logo">
-            
+        <div class="pull-right navbar-brand">
+            {{user.welcome}}
         </div>
     </div>
 </nav>
