Clarity Entry Form created(initial development),controller declaration pushed to route config,unnecessary scroll removed.

--- a/src/client/content/customtheme.css
+++ b/src/client/content/customtheme.css
@@ -788,8 +788,8 @@ form {
     margin-right: 0;
     width: auto;
     background: #fff;
-    min-height: 900px;
-    top: 110px;
+    /*min-height: 900px;*/
+    /*top: 110px;*/
 }
 
     .mainbar .container {
