--- a/src/client/app/layout/topnav.html
+++ b/src/client/app/layout/topnav.html
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-header">
         <a class="navbar-brand"><span class="brand-title">{{vm.title}}</span></a>
-        <a data-ng-if="user.isAuthenticated"  class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <a data-ng-if="vm.user.isAuthenticated"  class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -9,7 +9,7 @@
     </div>
     <div class="navbar-collapse collapse">
         <div class="pull-right navbar-brand">
-            {{user.welcome}}
+            {{vm.user.welcome}}
         </div>
     </div>
 </nav>
