--- a/src/client/content/styles.css
+++ b/src/client/content/styles.css
@@ -460,12 +460,15 @@ a {
 .mar-l0{
     margin-left: 0;
 }
+.mar-l15{
+    margin-left: 15px;
+}
 .uib-button-bar{
     display: none;
 }
-form .btn{
+/*form .btn{
     margin : 0;
-}
+}*/
 .mar-t15{
     margin-top: 15px;
 }
